--- a/scss/bootstrap/mixins/_text-emphasis.scss
+++ b/scss/bootstrap/mixins/_text-emphasis.scss
@@ -1,6 +1,6 @@
 // stylelint-disable declaration-no-important
 
-// Typography
+// apparel
 
 @mixin text-emphasis-variant($parent, $color) {
   #{$parent} {
